--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -266,6 +266,8 @@ Die menschliche Intuition ist schlecht in Wahrscheinlichkeitsrechnung.
 
 \chapter{Predictive Analytics mit R}
 
+Hier ist die Intro \cite{Intro_R}.
+
 % TODO
 % Kurzvorstellung R, Vergleich mit anderen Werkzeugen (insb. Python)
 % vllt R stark in Grafik
