--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -328,3 +328,11 @@ note = {Zugegriffen am: 03.05.2020},
 url = {https://www.faz.net/aktuell/rhein-main/corona-optimist-auch-superprognostiker-liegen-mal-daneben-16751444.html},
 language = {ngerman}
 }
+
+@manual{Intro_R,
+title = {An Introduction to R},
+author = {Venables, W. and Smith, D. and the R Core Team},
+note = {Version 4.0.3},
+year = {2020},
+language = {english}
+}
