--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -636,13 +636,16 @@ Abbildung~\xcom zeigt ein Beispiel für eine solche Prognose\footnote{
 Die Grafik gibt eine öffentliche Prognose vom 16.11.2020 zum Thema COVID-19 wider (vgl. \cite{GJP_Ink_F}).
 % charakteristiken: zeitbegrenzung, gegenseitig ausschließende und vollständige Antwortvarianten,
 % subjektive Wahrscheinlichkeiten ergänzen sich zu 100%
-}.
-
-% Good Judgement Inc
-% Öffentliche Forecasts
-% Bild Beispielfrage Forecasting
-
-% Roman aus Zeit teil davon
+}. Grundsätzlich sind alle Forecasting Exercises in ähnlicher Weise aufgebaut.
+Das Beispiel zeigt einige Grundeigenschaften dieser Aufgaben. Zunächst ist
+ein genaues Datum angegeben, an dem die Prognosen \glqq{fällig}\grqq{} werden. Ab
+diesem Datum ist die Antwort auf die Frage bekannt und es kann geprüft werden,
+ob und welche der Vorhersagen eingetreten sind. Weiterhin schließen sich die
+Antwortmöglichkeiten auf die Frage gegenseitig aus und es gibt keinen Wert der
+nicht in eine der Antwortkategorien passt (Vollständigkeit). Schließlich ergänzen
+sich die subjektiven Wahrscheinlichkeiten, die für die einzelnen Optionen vergeben
+wurden, zu 100~\%.
+ 
 
 \subsection{Grundprinzipien des Forecasting}
 
