--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -629,10 +629,9 @@ es besser zu verstehen (vgl. \cite{Juergs}). Dabei handelt es sich um das zweite
 sei ein \glqq{Informationsjunkie}\grqq{}, der aus möglichst vielen, diversen
 Quellen seine Informationen bezieht (vgl. \cite{Juergs}).
 
-
 \emph{Good Judgment Inc.} veröffentlicht auch einen Teil ihrer Vorhesagen, sodass diese
 allgemein einsehbar sind (\emph{public superforecasts}; vgl. \cite{GJP_Ink}).
-Abbildung~\xcom zeigt ein Beispiel für eine solche Prognose\footnote{
+Abbildung~\ref{pic:Forecast} zeigt ein Beispiel für eine solche Prognose\footnote{
 Die Grafik gibt eine öffentliche Prognose vom 16.11.2020 zum Thema COVID-19 wider (vgl. \cite{GJP_Ink_F}).
 % charakteristiken: zeitbegrenzung, gegenseitig ausschließende und vollständige Antwortvarianten,
 % subjektive Wahrscheinlichkeiten ergänzen sich zu 100%
@@ -640,12 +639,19 @@ Die Grafik gibt eine öffentliche Prognose vom 16.11.2020 zum Thema COVID-19 wid
 Das Beispiel zeigt einige Grundeigenschaften dieser Aufgaben. Zunächst ist
 ein genaues Datum angegeben, an dem die Prognosen \glqq{fällig}\grqq{} werden. Ab
 diesem Datum ist die Antwort auf die Frage bekannt und es kann geprüft werden,
-ob und welche der Vorhersagen eingetreten sind. Weiterhin schließen sich die
+ob und welche der Vorhersagen eingetreten sind. Zudem ist die Frage sehr präzise
+gestellt, was ebenfalls der Überprüfbarkeit dient. Weiterhin schließen sich die
 Antwortmöglichkeiten auf die Frage gegenseitig aus und es gibt keinen Wert der
 nicht in eine der Antwortkategorien passt (Vollständigkeit). Schließlich ergänzen
 sich die subjektiven Wahrscheinlichkeiten, die für die einzelnen Optionen vergeben
 wurden, zu 100~\%.
  
+\begin{figure}%[!hbt]
+\centering
+\caption{Beispiel eines Forecast}
+\includegraphics[scale=0.95]{Grafiken/Forecast_Ink.pdf} 
+\label{pic:Forecast}
+\end{figure}
 
 \subsection{Grundprinzipien des Forecasting}
 
