--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -272,6 +272,7 @@ Hier ist die Intro \cite{Intro_R}.
 % Kurzvorstellung R, Vergleich mit anderen Werkzeugen (insb. Python)
 % vllt R stark in Grafik
 % R Verwendung in Verwaltungen
+% Grafik Skripte
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TODO Bilder
