--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -144,7 +144,7 @@ Bereichen Politik und Wirtschaft\footnote{
 Andere Themen, wie beispielweise naturwissenschaftliche Fragestellungen,
 z. B. \glqq{Wie} wahrscheinlich ist die Detektion dunkler Materie
 in den nächsten fünf Jahren?\grqq, wurden nicht behandelt.
-}, was insbesondere für den öffentlichen Sektor relevant ist. Zweitens handelt
+}, was im Hinblick auf die Thematik des öffentlichen Sektors relevant ist. Zweitens handelt
 es sich dabei um generelle Probleme der menschlichen Urteilsfindung.
 Probleme, die in vielen Bereichen auftreten und zu Fehleinschätzungen führen
 können. Zudem konnten datenbasierte Algorithmen, also
