--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -105,6 +105,8 @@ auslösen.
 % Thapa_Parycek S. 46
 \subsection{Eine optimistische Sichtweise}
 
+% Formalisierung erwünscht (BBC + IC)
+
 Bessere Prognosen und Urteile führen zu besseren Entscheidungen. Dies bringt
 wiederum sowohl Vorteile gegenüber Konkurrenten als auch Vorteile bei der
 Auseinandersetzung mit der \glqq{Natur}\grqq\footnote{
