--- a/Text/Arbeit/Inhalt/Einleitung.tex
+++ b/Text/Arbeit/Inhalt/Einleitung.tex
@@ -1,18 +1,25 @@
 \chapter{Einleitung}
 \label{part:Einleitung}
 
+\section{Ziele und Vorgehen}
+
 In dieser Arbeit soll die Anwendung von Datenanalysen und insbesondere
-von \emph{\gls{glos:Predictive_Analytics}} im öffentlichen Sektor untersucht
+von \gls{glos:Predictive_Analytics} im öffentlichen Sektor untersucht
 werden.
 Der Schwerpunkt liegt dabei auf Deutschland, wobei aber auch relevante
-Anwendungsgebiete in anderen Staaten betrachtet werden. \\ \\
+Anwendungsgebiete in anderen Staaten betrachtet werden.
+
+
+\section{Aufbau der Arbeit}
 Der einleitende Teil~\ref{part:Schw_Vorhersagen} soll zunächst das Problem der
 Schwierigkeit von
 Prognosen untersuchen und damit eine Motivation für die Anwendung von 
-\emph{predictive analytics} liefern. \\ \\
+formalen Methoden zur Datenanalyse liefern.
+
 In Teil~\ref{part:Konzepte_PA} werden die wichtigsten Konzepte von
 \emph{predictive analytics} vorgestellt. Dabei werden auch die allgemeinen
-Risiken bei der Anwendung diskutiert. \\ \\
+Risiken bei der Anwendung diskutiert. 
+
 \misobj{weitere Teile}
 
 \chapter{Die Schwierigkeit von Vorhersagen}
