--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -87,6 +87,15 @@ Data Science eher die Entwicklung von Algorithmen im Vordergrund.
 Bei Predictive Analytics hingegen steht die Anwendung dieser Methoden im 
 Fokus.
 
+Ein im Zusammenhang mit Datenanalysen oft verwendeter Begriff ist Big Data.
+Bei Big Data werden die großen Dimensionen der analysierten Daten betont, wobei
+drei charakteristische Eigenschaften im Vordergrund stehen, nämlich Volume, Velocity 
+und Variety (als \emph{3 Vs} abgekürzt; vgl. \cite{McCarthy}, S.~7-8). Dabei bezeichnet Volume
+besonders große Mengen an Daten, Velocity die hohe Geschwindigkeit der Datenverarbeitung
+und Variety die große Vielfalt der Datenquellen\footnote{
+Die Vielfalt der Daten wird in Abschnitt~\xcom noch genauer erläutert.
+}. 
+
 Business Analytics wird als Oberbegriff für Prozesse definiert, die
 Analysemodelle im geschäftlichen Kontext erstellen (vgl. \cite{McCarthy}, S.~6)). 
 Predictive Analytics und Data Mining werden dann als Bestandteil von Business Analytics
@@ -106,7 +115,7 @@ wie beispielsweise die CIA.
 ähnlich wie bei Business Analytics, als ein Bestandteil von 
 Business Intelligence eingeordnet werden (vgl. \cite{Gluchowski}, S.~92). 
 
-Ein in diesem Zusammenhang weniger verbreiteter Begriff ist Forecasting,
+Ein weniger verbreiteter Begriff ist Forecasting,
 die Erstellung von Prognosen durch menschliche Beobachter. Im nächsten Abschnitt
 wird diese Form von Vorhersagen genauer beschrieben und anschließend mit
 Predictive Analytics verglichen.  
