--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -1,5 +1,40 @@
 \chapter{Predictive Analytics im öffentlichen Sektor}
 
+Bei der folgenden Analyse ist es sinnvoll zwischen strategischer, taktischer und
+operativer Ebene zu unterscheiden. Im Allgemeinen lassen sich die verschiedenen
+Ebenen wie folgt abgrenzen:
+
+\begin{description}
+
+\item[Strategische Ebene:] \hfill \\
+Bei der strategischen Ausrichtung einer Organisation werden allgemeine, wegweisende Ziele definiert
+und es werden den Zielen Prioritäten zugewiesen. Strategische Entscheidungen werden in 
+der Regel vom Top Management gefällt. Im öffentlichen Sektor sind führende Politiker, 
+wie beispielsweise Minister, und hohe Staatsbeamte die Entscheidungsträger auf dieser Ebene.
+Die politische Weltanschauung der Entscheidungsträger hat auf dieser Ebene den 
+meisten Einfluss auf die gewählten Ziele und ihre Prioritäten.
+
+\item[Taktische Ebene:] \hfill \\
+Die Aufgabe der taktischen Ebene ist die Entwicklung eines Vorgehens, das es
+ermöglicht, die strategischen Ziele der Organisation zu erreichen. Die strategischen
+Prioritäten sollten dabei, wenn möglich, ebenfalls eingehalten werden. Entscheidungen
+auf der taktischen Ebene werden vom mittleren Management und seltener auch vom Top
+Management getroffen. Staatsbeamte im mittleren und gehobenen Dienst, sowie Projektmanager von
+Unternehmen, die öffentliche Aufträge bearbeiten, sind die Entscheidungsträger auf der taktischen
+Ebene im öffentlichen Sektor. Die politische Weltanschauung der Entscheidungsträger hat 
+auf die taktische Ebene weniger Einfluss als auf die strategische Ebene. 
+
+\item[Operative Ebene:] \hfill \\
+Entscheidungsträger auf der operativen Ebene haben die Aufgabe das \glqq{Tagesgeschäft}\grqq{}
+zu überwachen und sicherzustellen, dass die Vorgaben der taktischen Ebene eingehalten werden.
+Das operative Management und auch Angestellte ohne besondere Führungsaufgaben treffen operative
+Entscheidungen, wobei ihr Spielraum dabei durch die Entscheidungen der strategischen und taktischen
+Ebene meist stark eingeschränkt ist. Im öffentlichen Sektor führen Beamte im mittleren Dienst und 
+operative Manager von Firmen mit öffentlichen Auftraggebern Tätigkeiten auf operativer Ebene aus.
+
+
+\end{description}
+
 % TODO
 % Stand Entscheidungshilfen (wie vorstellbar: Mensch entscheidet, Computer
 %   unterstützt)
