--- a/Text/Arbeit/Inhalt/Abstract.tex
+++ b/Text/Arbeit/Inhalt/Abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
 \begin{center}
 \Huge
-\emph{\textbf{Abstract}}
+\emph{\textbf{Übersicht}}
 \end{center}
 \normalsize
 \vspace{15mm}
