Ten Commandments begonnen

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -241,28 +241,8 @@ auszulösen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
-% TODO evtl umbennen 
-\chapter{Probablility Scoring - Vertiefung}
 
-Vollständig: Es gibt keine weitere Kategorie, in die ein Objekt (oder in diesem
-Fall ein Ereignis) fallen könnte.
-
-Gegenseitig ausschließend: ...
-
-Die menschliche Intuition ist schlecht in Wahrscheinlichkeitsrechnung.
-
-% TODO
-% Brier Score Erklärung
-% Brier Score Probleme
-%   Vorhersage unwahrscheinlicher Ereignisse nicht gewürdigt
-%   50/50 fence sitters -> unbefriedigend, Frustration (need for closure, S. 81)
-%   % S. 276 Indiscriminate fence-sitting
-% Bayes Belief Updating Erklärung/Herleitung
-% Kognitive Verzerrungen, Auflistung, Diskussion
-%   Erlernbar oder nicht (- individuell nicht gelungen, + in Gruppe, 
-%     Kommunikation hilft, Unterschiede nicht unüberwindbar)
-% + eher statistisch, mathematische "Verzerrungen" (subadditivity ...)
-% 11 Commandments GJP
+\input{Inhalt/Anhang_Forecasting}
 
 \chapter{Predictive Analytics mit R}
 
