--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -336,3 +336,11 @@ note = {Version 4.0.3},
 year = {2020},
 language = {english}
 }
+
+@misc{Ten_Comm,
+title = {Ten Commandments for Aspiring Superforecasters},
+howpublished = {Good Judgment Inc.},
+note = {Accessed: 17.11.2020},
+url = {https://goodjudgment.com/philip-tetlocks-10-commandments-of-superforecasting/},
+language = {english}
+}
