--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -667,16 +667,16 @@ Quellen seine Informationen bezieht (vgl. \cite{Juergs}).
 allgemein einsehbar sind (\emph{public superforecasts}; vgl. \cite{GJP_Ink}).
 Abbildung~\ref{pic:Forecast} zeigt ein Beispiel für eine solche Prognose\footnote{
 Die Grafik gibt eine öffentliche Prognose vom 16.11.2020 zum Thema COVID-19 wider (vgl. \cite{GJP_Ink_F}).
-}. Grundsätzlich sind alle Forecasting Exercises in ähnlicher Weise aufgebaut.
-Das Beispiel zeigt einige Grundeigenschaften der Forecasts. Zunächst ist
-ein genaues Datum angegeben, an dem die Prognosen \glqq{fällig}\grqq{} werden. Ab
-diesem Datum ist die Antwort auf die Frage bekannt und es kann geprüft werden,
-ob und welche der Vorhersagen eingetreten sind. Zudem ist die Frage sehr präzise
-gestellt, was ebenfalls der Überprüfbarkeit dient. Weiterhin schließen sich die
-Antwortmöglichkeiten auf die Frage gegenseitig aus und es gibt keinen Wert der
-nicht in eine der Antwortkategorien passt (Vollständigkeit). Schließlich ergänzen
-sich die subjektiven Wahrscheinlichkeiten, die für die einzelnen Optionen vergeben
-wurden, zu 100~\%.
+}. Die Fragen werden dabei so gestellt, dass letztendlich immer entschieden werden
+kann, ob und welche Option sich bewahrheitet hat. Das Beispiel zeigt vier
+Charakteristiken, die Forecasting Exercises im Allgemeinen überprüfbar machen.
+Erstens ist ein genaues Datum angegeben, an dem die Prognosen \glqq{fällig}\grqq{} werden.
+Zweitens ist die Frage sehr präzise formuliert, um Missverständnisse und Mehrdeutigkeiten
+zu vermeiden. Drittens kann nur eine der Antwortoptionen richtig sein, weil die Optionen
+sich gegenseitig ausschließen. Und viertens ist kein Szenario möglich, für das keine
+Antwortoption passen würde. Zum Schluss wird noch darauf hingewiesen, dass sich
+die subjektiven Wahrscheinlichkeiten, die für die einzelnen Optionen vergeben werden,
+immer zu 100~\% egänzen müssen.
  
 \begin{figure}%[!hbt]
 \centering
