--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -155,8 +155,8 @@ eine große Rolle spielten (vgl. zum Beispiel \cite{Proctor}).
 
 Ein weiteres Beispiel für eine Entscheidung, die nicht in erster Linie Vorteile
 gegenüber Konkurrenten verspricht, ist eine Entscheidung für eine bessere
-Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist, die 
-Möglichkeit zu erlangen, mehr Menschen zu heilen.
+Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist, 
+mehr Menschen eine Heilung zu ermöglichen.
 }
 
 \section{Spieltheoretische Betrachtung}
