Mehr zu Ten Commandments

--- a/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
+++ b/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
@@ -61,4 +61,41 @@ Frage nach der Anzahl der Klavierstimmer, die in Chicago leben, wird in kleinere
 
 \end{description}
 
+Durch die Zerlegung in Teilprobleme werden getroffene Annahmen explizit gemacht, insbesondere können
+fehlerhafte Annahmen besser erkannt werden. Schätzungen für die einzelnen Größen und damit für das Gesamtproblem
+können erstellt und verschiedene Schätzungen miteinander verglichen werden. Dadurch kann der Grad der Unsicherheit
+der Gesamtschätzung deutlicher herausgearbeitet werden.
+
+\item[(3) Berücksichtigung von Basisraten:] \hfill \\
+Dabei wird zwischen der Sicht von Außerhalb (\emph{outside view}) und der Sicht von Innerhalb (\emph{inside view})
+unterschieden. Bei der Sicht von Außerhalb geht es darum, eine Basisrate für das spezifische Ereignis aufzustellen.
+Die Kernfrage, die dabei beantwortet werden muss, lautet:
+
+\begin{description}
+\item[>] Wie oft geschehen Dinge dieser Art in ähnlichen Situationen?
 \end{description}
+
+Bei der Sicht von Innerhalb werden Eigenschaften gesammelt, die den konkreten Fall von vergleichbaren Fällen
+unterscheiden. Diese neuen Variablen werden dann genutzt, um die Basisrate abzuändern und an die konkrete
+Frage anzupassen.
+
+Technischer ausgedrückt handelt es sich bei diesem Vorgehen um das Aufstellen eines Algorithmus, der auf Basisraten
+basiert (siehe auch S.~\xcom). Zunächst wird anhand historischer Betrachtungen eine Basisrate aufgestellt, die
+beschreiben soll, wie häufig Ereignisse dieser Art im Allgemeinen auftreten. Daraufhin werden Prädiktorvariablen gesucht, die
+dafür verantwortlich sein können, dass die Häufigkeit eines Ereignisses von der allgemeinen Basisrate abweicht. Diese
+Prädiktorvariablen werden dann gewichtet und mit der Basisrate verrechnet, wobei manche Prädiktoren das Ereignis wahrscheinlicher
+machen, wohingegen andere die Warscheinlichkeit des betrachteten Ereignisses geringer machen.
+
+\item[(4) Belief Updating:]
+Gute Forecaster passen ihre Weltsicht ständig an neue Erkenntnisse an. Dabei geht es nicht nur darum die Formel von Bayes
+(siehe S.~\xcom) anzuwenden. Vielmehr müssen zunächst wichtige Signale aus dem Fluss von Nachrichten herausgefiltert werden, wobei
+Wunschdenken, Über- und Unterreaktionen vermieden werden müssen. Hierfür müssen Forecaster ständig die aktuellen Nachrichten beobachten 
+und kritisch widerspiegeln.
+
+\item[(5) Berücksichtigung rivalisierender Weltsichten:]
+Hierbei geht es darum, den Wahrheitsgehalt zweier gegensätzlicher Meinungen in Verhältnis zueinander zu bringen (siehe S.~\xcom).
+
+
+\end{description}
+
+Wie in der Beschreibung angedeutet, versuchen manche Prinzipien die in Anhang~\xcom besprochenen Formeln in Worten zu beschreiben.
