Steuerverwaltung Notizen hinzugefügt

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -52,7 +52,8 @@ IGNORE_pages = 60,
 IGNORE_url = 
   "https://www.oecd-ilibrary.org/content/publication/9789264256453-en",
 IGNORE_doi = "https://doi.org/https://doi.org/10.1787/9789264256453-en",
-doi = {10.1787/9789264256453-en},
+doi = {https://doi.org/10.1787/9789264256453-en},
+isbn = {9789264256453},
 language = {english}
 }
 
