--- a/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
+++ b/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
@@ -113,7 +113,7 @@ Diskriminierungswert schaden, da bei vielen Prognosen eine vorsichtige \glqq{50/
 die Vorhersagegenaugkeit auf einem guten Niveau zu halten, muss hierbei eine Balance gefunden werden.
 
 Zum Anderen spielt es auch eine Rolle, wie ein Urteil oder eine Prognose kommuniziert wird. Ein Urteil, das starke
-Unsicherheit ausdrückt, kann entmutigend wirken. Aus diesem Grund wird vorgeschlagen, nach der Urteilsfindung
+Unsicherheit ausdrückt, kann entmutigend wirken. Aus diesem Grund wird vorgeschlagen, nach der Urteilsfindung zwar
 eine entschlossene Haltung einzunehmen aber trotzdem den Grad der Unsicherheit bei der Entscheidung zu vermitteln
 (vgl. \cite{Jackson}, S.~293).
 
