--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -194,6 +194,83 @@ citecolor=MidnightBlue }
 % Einschätzung der politischen Stimmungslage
 % Vorhersage kultureller Unterschiede
 
+\subsubsection{Predictive Analytics in der Steuerverwaltung}
+
+Hier \cite{OECD}.
+
+% TODO
+
+% FTA: Forum on Tax Administration Survey (DE leider nicht dabei)
+
+% EINSATZGEBIETE VON PA
+
+% 1) Audit Case Selection
+
+% hauptsächliches Anwendungsgebiet (S. 20)
+%  prioritise cases for investigation, audits
+
+%  social network analysis (für bestimmte fälle, z. B. VAT carousel fraud)(S. 21-22)
+% identify risk groups where individual-level assessments may fail
+% identify links between individuals, assemble connected individuals to visualised networks
+% Analyse der networks (risk score) per Hand, rule based oder statistical model
+
+% 2) Filing (Aktenablage) and payment compliance (S. 24)
+
+% aim: secure outstanding payment or return or prevent the problem from occurring
+% predictive: identify taxpayers who are likeliy to fail to meet their obligations
+% prescriptive: how communicate most effectively with this group
+
+% 3) Debt management (S. 26)
+
+% resource priorization
+% traditional: identify groups of potentially high-risk debtors
+% new (u. A. uplift modelling): identify cases that are most likely to respond to
+%   debt-management intervention
+
+% 4) Taxpayer Service (S. 27)
+
+% z. B. Text mining and sentiment analysis
+
+% Text minining of inbound email in Singapore (S. 27-28)
+
+% identify the nature of taxpayer inquiries
+% example: identify common queries of taxpayers after policy has changed
+%   -> able to react: infos on website, updates to taxpayers (vorsorglich)
+% Text Mining replaced manual tracking of email enquiries + track enquiries more objectively
+
+% 5) Policy evaluation (S. 28)
+
+% most analytics work carried out to support operational decision-making
+% but too for decision-making in relation to strategy and policy
+
+% tax gap analysis (Steuerlücke), forecasting the impact of changes in tax policy
+
+% (S. 29) 2012 model for assessment the effects of tax-reform on economy and social-welfare
+% estimate economic and social consequences of tax reform, 
+% report of analytics team played a key role in the policy reform process
+
+% DATENPROBLEME
+
+ % S. 51
+% concerns about representativeness of data
+
+% data from highly biased samples (alte interventionsfälle) -> nur kleiner ausschnitt aus gesamtpopulation
+
+% selection effects -> biases
+
+ % S. 52
+
+% data from randomly selected audits in US to improve representativeness
+
+% DATA COMPREHENSIVENESS (S. 52)
+
+% data for analytics project from data collected and stored for
+%   operational purposes
+
+% -> missed opportunities: not useful information for operational purposes
+%     (e. g. type of non-compliance in audit) but would be useful for analytical purposes
+%     distinct models for each risk type possible
+
 \subsubsection{Predictive Policing}
 
 Grafik aus \cite{Bode}, S.~2.
@@ -204,6 +281,8 @@ Grafik aus \cite{Bode}, S.~2.
 \includegraphics[scale=1.1]{Grafiken/Predictive_Policing_Ink.pdf} 
 \label{pic:Predictive_Policing}
 \end{figure}
+
+\subsubsection{Weitere Anwendungen}
 
 \subsubsection{Cambridge Analytica - Fallstudie}
 
@@ -247,6 +326,11 @@ auszulösen.
 \chapter{Predictive Analytics mit R}
 
 Hier ist die Intro \cite{Intro_R}.
+
+% TODO
+
+% organisations mature in R -> recruits from academia (R heavily used)
+%    (OECD, S. 50) 
 
 % TODO
 % Kurzvorstellung R, Vergleich mit anderen Werkzeugen (insb. Python)
