Forecasting Fazit begonnen

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -245,7 +245,7 @@ Hier \cite{OECD}.
 
 % tax gap analysis (Steuerlücke), forecasting the impact of changes in tax policy
 
-% (S. 29) 2012 model for assessment the effects of tax-reform on economy and social-welfare
+% (S. 29) 2012 model (macro-economic) for assessment the effects of tax-reform on economy and social-welfare
 % estimate economic and social consequences of tax reform, 
 % report of analytics team played a key role in the policy reform process
 
