--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -687,15 +687,41 @@ immer zu 100~\% egänzen müssen.
 
 \subsection{Grundprinzipien des Forecasting}
 
+Tetlocks Forecasting Exercises haben gezeigt, dass sogar bei Experten mit
+langjähriger Erfahrung viel Verbesserungspotential bezüglich
+Vorhersagegenauigkeit und Urteilsvermögen besteht. Von den Ergebnissen kann
+prinzipiell aber jeder profitieren (vgl. \cite{Economist}). Aus diesem Grund
+sind im folgenden Text einige wichtige Punkte zum Thema Forecasting
+zusammengefasst und in Kürze erläutert:
 
-% TODO Zusammenfassung
-% - Brier Score: große Zahlen -> Evidence
-% - Bayes + einfache Statistische Regeln als Hilfswerkzeug
-% - besser fox als hedgehog sein
-O\footnote{
-Dies wird auch oft in Artikeln erwähnt, die über Forecasting berichten (vgl.
+\begin{description}
+
+\item[Brier Score:] \hfill \\
+Mit Hilfe des Brier Score kann die Genauigkeit von Prognosen einzelner Forecaster überprüft werden.
+Zudem kann die Leistung verschiedener Forecaster miteinander vergleichen werden. Hierzu müssen allerdings
+viele Prognosen gesammelt, die dann im Brier Score verrechnet werden. Zusätzlich ist die Auswahl der
+Fragen und die richtige Fragestellung entscheidend. Genauere Erläuterungen hierzu sind in
+Anhang~\xcom zu finden.
+
+\item[Formel von Bayes:] \hfill \\
+Die Formel von Bayes kann dazu genutzt werden, menschliche Prognosemodelle mit Hilfe neuer
+Erkenntnisse zu verbessern (Belief Updating). Zudem kann mit weiteren Formeln aus der
+Wahrscheinlichkeitstheorie die Konsistenz menschlicher Denkmodelle zusätzlich verbessert werden.
+Umgekehrt kann mit Hilfe dieser Werkzeuge auch festgestellt werden, ob bestimmte Forecaster
+logisch konsitent denken oder nicht. Mehr Informationen hierzu befinden sich in Anhang~\xcom. 
+
+\item[Einfluss der Persönlichkeit (Cognitive Style):] \hfill \\
+Für ein gutes Urteilsvermögen ist es grundsätzlich besser ein Fox als ein Hedgehog zu sein\footnote{
+Dieser wichtige Punkt wird auch oft in Artikeln betont, die über Forecasting berichten (vgl.
 \cite{Economist} und \cite{Burton})
-}
+}.
+
+
+\end{description}
+
+% TODO Zusammenfassung 
+% - besser fox als hedgehog sein
+
 % - Versuchen Kognitive Verzerrungen abzumildern
 % - no thought above criticism (S. 102, 118)
 % - fördert bescheidenheit, beugt overconfidence vor (S. 104)
