Forecasting Fazit fertig

--- a/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
+++ b/Text/Arbeit/Inhalt/Anhang_Forecasting.tex
@@ -1,14 +1,16 @@
 % TODO evtl umbennen 
 \chapter{Forecasting - Technische Details}
 
-Für Überprüfbarkeit:
+\section{Evidenzbasierte Methoden}
 
-Vollständig: Es gibt keine weitere Kategorie, in die ein Objekt (oder in diesem
-Fall ein Ereignis) fallen könnte.
+%Für Überprüfbarkeit:
 
-Gegenseitig ausschließend: ...
+%Vollständig: Es gibt keine weitere Kategorie, in die ein Objekt (oder in diesem
+%Fall ein Ereignis) fallen könnte.
 
-Die menschliche Intuition ist schlecht in Wahrscheinlichkeitsrechnung.
+%Gegenseitig ausschließend: ...
+
+%Die menschliche Intuition ist schlecht in Wahrscheinlichkeitsrechnung (siehe S. X).
 
 % TODO
 % Brier Score Erklärung
@@ -152,10 +154,6 @@ Zum Schluss wird betont, das die Regeln eher als Ratschläge interpretiert werde
 werden können. Sonst läuft man Gefahr, in zu starre Denkmuster zu verfallen.
 %---------------------------------------------------------------------------------
 \end{description}
-
-% TODO
-
-% Schwer umzusetzen (-> Regel 1)
 
 Wie in der Beschreibung angedeutet, versuchen manche Ratschläge, mathematische Formulierungen und deren Auswirkungen in Worten zu beschreiben.
 Es ist jedoch einfacher, die Ratschläge zu verstehen und vor Allem auch einzuhalten, wenn die zugrunde liegenden Formeln bekannt
