--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -120,6 +120,8 @@ pragmatisch ist.
 
 \subsection{Eine pessimistische Sichtweise}
 
+% 3 Ängste: Verlust Privilegien, Verlust der Arbeit, Verlust der (kollektiven) Identität
+
 Je mehr das Treffen von Entscheidungen zur Hauptaufgabe von Personen gehört,
 desto stärker betrachten sie \emph{predictive analytics} als eine Gefahr für
 ihren Arbeitsplatz.
